# Auto_Parallelise

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.bak  .gitmodules  build.sh  demonstration.odp  init-repo.sh  library.bib  slowdown.txt  speedup.txt  viewdot.sh
0-Proposal/: Makefile  main.tex  mystyle.sty
1-Scientific-Paper/: main.tex
2-Report/: .gitignore  autoparallelise  code  main.tex  mystyle.sty  password-cracker  rust  simple-example
2-Report/pages/: appendix.tex  conclusion.tex  design.tex  discussion.tex  evaluation.tex  implementation.tex  introduction.tex  preamble.tex
auto-parallelise/: Cargo.toml
auto-parallelise/src/: lib.rs  linter.rs  syntax_extension.rs
auto-parallelize/: Cargo.toml
auto-parallelize/src/: lib.rs  linter.rs  shared_state.rs  syntax_extension.rs  taskpool.rs  treepool.rs
auto_parallelise/src/: dependency_analysis.rs  lib.rs  linter.rs  noqueue_threadpool.rs  scheduler.rs  shared_state.rs  syntax_extension.rs
docs/: .gitignore  auto-parallelize.bib  inspection.odp  library.bib
docs/0-Pre-proposal/: Makefile  main.tex  mystyle.sty
ssi-prototype/: Cargo.toml  dictionary.txt  imgui.ini
ssi-prototype/src/: command-line.rs  custom_render_window.rs  extra_widgets.rs  machine.rs  machine_usage_window.rs  main.rs  process.rs  process_window.rs  raw_packet_window.rs  router.rs  simulate_window.rs  simulation_window.rs  support.rs  timescale_window.rs  ui_performance_window.rs  worker.rs
ssi-prototype/ssi_model/: Cargo.toml
ssi-prototype/ssi_model/src/: lib.rs  machine.rs  main.rs  process.rs  router.rs
(+90 files in other folders)
