[package]
name = "ssi-prototype"
version = "0.1.0"
authors = ["Michael Oultram <michaeloultram@users.noreply.github.com>"]

[dependencies]
ssi_model = { version = "0.1.0", path = "ssi_model" }
rand = "0.3"
gfx = "0.16"
gfx_window_glutin = "0.17"
glium = { version = "0.17", default-features = true }
glutin = "0.9"
imgui = "0.0.15"
imgui-sys = "0.0.15"
imgui-glium-renderer = "0.0.15"
